tests/dataset/tpc-ds/compiler/java/q95.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq951008897998/001/Q95.java:221: error: cannot find symbol
    static List<any> distinct(List<any> xs) {
                                   ^
  symbol:   class any
  location: class Q95
/tmp/TestJavaCompiler_TPCDSQueriesq951008897998/001/Q95.java:221: error: cannot find symbol
    static List<any> distinct(List<any> xs) {
                ^
  symbol:   class any
  location: class Q95
/tmp/TestJavaCompiler_TPCDSQueriesq951008897998/001/Q95.java:223: error: cannot find symbol
        for (any x : xs) {
             ^
  symbol:   class any
  location: class Q95
3 errors
